added some images into assets to use in bookingsNew and background

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ html {
   scroll-behavior: smooth;
 margin: 1em;
 }
-
-.index-cards {
-  align-content: center;
+#root {
+  background-image: url('./assets/mandala.png');
 }
+
